# 2048Game

./: CMakeLists.txt  README.txt  clear_screen.cpp  control.cpp  database.cpp  leaderboard.cpp  leaderboard4x4  load_save.cpp  main.cpp  make_grid.cpp  merge_col.cpp  merge_row.cpp  player_name.cpp  print_grid.cpp  rand_number.cpp  save_game.cpp  saves  score.cpp  size_input.cpp  thu_vien_2048.h  undo_redo.cpp  win_lose.cpp
Source/: 2048Lib.hpp  Data.cpp  DieuKhien.cpp  GameLogic.cpp  GiaiPhongBoNho.cpp  GiaoDien.cpp  NewGame.cpp  UndoRedo.cpp  main.cpp
include/: 2048Lib.h  Controls.h  Data.h  FreeMemory.h  Game.h  GameLogic.h  Graphics.h  NewGame.h  Node.h  PlayerInfo.h  ToaDo.h  UndoRedo.h
src/: Controls.cpp  Data.cpp  FreeMemory.cpp  Game.cpp  GameLogic.cpp  Graphics.cpp  NewGame.cpp  UndoRedo.cpp  main.cpp
